# fast_radix_trie

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: bench.rs
examples/: insert_lines.rs
src/: lib.rs  map.rs  node.rs  node_common.rs  node_header.rs  serialization.rs  set.rs  tree.rs
src/node_alloc/: mod.rs  node.rs  node_header.rs
src/opt/: node.rs  node_header.rs
