[package]
name = "radix_trie"
version = "0.1.0"
authors = [
	"Takeru Ohta <phjgt308@gmail.com>",
	"Evan Cameron <cameron.evan@gmail.com>",
]
description = "Memory-efficient data structures based on radix tree"
homepage = "https://github.com/bluecatengineering/radix_trie"
repository = "https://github.com/bluecatengineering/radix_trie"
readme = "README.md"
keywords = ["radix", "trie"]
categories = ["data-structures", "no-std"]
license = "MIT"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
memchr = { version = "2", default-features = false }

[dev-dependencies]
criterion = "0.7.0"
noargs = "0.4.1"
rand = "0.9"

[features]
default = ["std", "realloc"]
std = []
realloc = []

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "insert_lines"
path = "examples/insert_lines.rs"

[[bench]]
name = "bench"
harness = false
